# akarpov_music_tools

./: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
src/: config.py  main.py
src/api/endpoints/: spotify.py  translation.py
src/api/models/: spotify.py  translation.py
src/services/: spotify.py  translation.py
