[tool.poetry]
name = "akarpov-music-tools"
version = "0.1.0"
description = ""
authors = ["sanspie <sanspie@akarpov.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.105.0"
uvicorn = "^0.24.0"
spotipy = "^2.23.0"
deep-translator = "^1.11.4"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
httpx = "^0.25.2"
structlog = "^23.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.23.2"
pytest-cov = "^4.1.0"
black = "^23.12.0"
isort = "^5.13.2"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3